syntax = "proto3";

option go_package = "CentralServerProtoBuf/";

message registerLoginFormat {
  string userName = 1;
  string password = 2;
}

message album {
  string albumName = 1;
}

message reply_message {
  string status = 1;
}

message voteValue {
  int64 sum   = 1;
  int64 count = 2;
}

message voteMap {
  map<uint32, voteValue> map = 1;
}

message peerInfo {
  uint32 id   = 1;
  string ip   = 2;
  string port = 3;
}

message dotPair {
  uint32 id      = 1;
  uint64 version = 2;
}

message fileInfo {
  map<uint32, VoteInfo> votes  = 1;
  repeated dotPair      dotSet = 2;
}

message groupInfo {
  repeated dotPair      dotSet = 1;
}

message crdt {
  map<uint32, uint64>    versionVector = 1;
  map<string, fileInfo>  files         = 2;
  map<string, groupInfo> groupUsers    = 3;
}

message sessionStart {
  uint32          id             = 1;
  crdt            crdt           = 2;
  repeated string peers          = 3;
  repeated peerInfo sessionPeers = 4;
}

message quitMessage {
  map<string, voteMap> map = 1;
  repeated string peers    = 2;
}

message Message {
  Type type = 1;
  oneof msg {
    registerLoginFormat m1 = 2;
    album               m2 = 3;
    sessionStart        m3 = 4;
    quitMessage         m4 = 5;
    reply_message       m5 = 6;
  }
}

enum Type {
  register = 0; // registerLoginFormat
  login    = 1; // registerLoginFormat
  logout   = 2; // <None>
  create   = 3; // album
  get      = 4; // album
  send     = 5; // sessionStart
  quit     = 6; // quitMessage
  reply    = 7; // reply
}
